Task views/tab and actions done

--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -47,7 +47,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="{% url 'home' %}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -62,7 +62,7 @@
 
             <!-- Nav Item - Tasks Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="{% url 'task-list' %}">
                     <i class="fa-solid fa-list-check"></i>
                     <span>Tasks</span></a>
             </li>
