--- a/projectsite/templates/task_del.html
+++ b/projectsite/templates/task_del.html
@@ -6,7 +6,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Delete Task</div>
+                        <div class="card-title font-weight-bold text-danger">Delete Task</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
 
