Subtask views/tab and actions done

--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -69,7 +69,7 @@
 
             <!-- Nav Item - Subtasks Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="{% url 'subtask-list' %}">
                     <i class="fa-solid fa-thumbtack"></i>
                     <span>Subtasks</span></a>
             </li>
@@ -91,7 +91,7 @@
 
             <!-- Nav Item - Categories -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="{% url 'subtask-list' %}">
                     <i class="fa-regular fa-font-awesome"></i>
                     <span>Categories</span></a>
             </li>
