Note views/tab and actions done

--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -84,7 +84,7 @@
 
             <!-- Nav Item - Notes -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="{% url 'note-list' %}">
                     <i class="fa-regular fa-note-sticky"></i>
                     <span>Notes</span></a>
             </li>
