--- a/projectsite/templates/note_form.html
+++ b/projectsite/templates/note_form.html
@@ -6,8 +6,8 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title font-weight-bold text-primary">{% if object %}Update Subtask {% else %} Add New
-                            Subtask {% endif %}</div>
+                        <div class="card-title font-weight-bold text-primary">{% if object %}Update Note {% else %} Add New
+                            Note {% endif %}</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
 
