--- a/projectsite/templates/task_form.html
+++ b/projectsite/templates/task_form.html
@@ -6,7 +6,8 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title font-weight-bold text-primary">Update Task</div>
+                        <div class="card-title font-weight-bold text-primary">{% if object %}Update Task {% else %} Add New
+                            Task {% endif %}</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
 
