Category views/tab and actions done

--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -91,7 +91,7 @@
 
             <!-- Nav Item - Categories -->
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'subtask-list' %}">
+                <a class="nav-link" href="{% url 'category-list' %}">
                     <i class="fa-regular fa-font-awesome"></i>
                     <span>Categories</span></a>
             </li>
