Priority views/tab and actions done

--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -98,7 +98,7 @@
 
             <!-- Nav Item - Priorities -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="{% url 'priority-list' %}">
                     <i class="fa-solid fa-hourglass-start"></i>
                     <span>Priorities</span></a>
             </li>
