--- a/projectsite/templates/note_list.html
+++ b/projectsite/templates/note_list.html
@@ -11,9 +11,8 @@
                     </div>
                     <br />
                     <div class="col-md-12 row">
-                        <div class="col-md-6">
-                            <form class="navbar-left navbar-form nav-search mr-md-3"
-                                action="{% url 'note-list'%}">
+                        <div class="col-md-6 mb-2 mb-md-0">
+                            <form class="navbar-left navbar-form nav-search mr-md-3" action="{% url 'note-list'%}">
                                 <div class="input-group">
                                     <input type="text" placeholder="Search ..." class="form-control" name="q" />
                                     <div class="input-group-append">
@@ -24,7 +23,34 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-3 mb-2 mb-md-0">
+                            <form method="get" class="row g-2 align-items-center">
+                                <div>
+                                    <select class="form-control form-control-sm" id="smallSelect" name="sort_by" onchange="this.form.submit()">
+                                        <option value="id" {% if request.GET.sort_by == "id"%}selected{% endif %}>Latest</option>
+                                        <option value="task__title" {% if request.GET.sort_by == "task__title"%}selected{% endif %}>Task</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <input type="hidden" name="sort_order" value="{{ request.GET.sort_order }}">
+                                    <button type="submit" class="btn input-group-text" onclick="toggleSortOrder(this)">
+                                        <i class="fa-solid {% if request.GET.sort_order == 'asc' %}fa-arrow-up-wide-short{% else %}fa-arrow-down-wide-short{% endif %}"></i>
+                                    </button>
+                                </div>
+                            </form>
+                            
+                            <script>
+                            function toggleSortOrder(button) {
+                                const form = button.closest('form');
+                                const hiddenInput = form.querySelector('input[name="sort_order"]');
+                                const currentOrder = hiddenInput.value;
+                                
+                                // Toggle between asc and desc
+                                hiddenInput.value = currentOrder === 'asc' ? 'desc' : 'asc';
+                            }
+                            </script>
+                        </div>
+                        <div class="col-md-3 mb-2 mb-md-0">
                             <div class="float-right">
                                 <a href="{% url 'note-add' %}" class="btn btn-success btn-rounded">Add
                                     Note</a>
