Added new form/lists subtitles and modified semi-responsive tables

--- a/projectsite/templates/category_form.html
+++ b/projectsite/templates/category_form.html
@@ -6,9 +6,12 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title font-weight-bold text-primary">{% if object %}Update Category {% else %} Add New
-                            Category {% endif %}</div>
-                        <div class="card-category">Page Subtitle</div>
+                        <div class="card-title font-weight-bold text-primary">
+                            {% if object %}Update Category {% else %} Add New Category {% endif %}
+                        </div>
+                        <div class="card-category">
+                            {% if object %}Make changes to how this category appears. {% else %} Create a new category to group related tasks. {% endif %}
+                        </div>
                     </div>
 
                     <div class="col-md-6">
