--- a/projectsite/templates/priority_list.html
+++ b/projectsite/templates/priority_list.html
@@ -7,7 +7,7 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="card-title font-weight-bold text-primary">List of Priorities</div>
-                        <div class="card-category">Page Subtitle</div>
+                        <div class="card-category">Set and review the priority levels of your tasks.</div>
                     </div>
                     <br />
                     <div class="col-md-12 row">
@@ -59,6 +59,7 @@
                         </div>
                     </div>
                     <div class="card-body">
+                    <div class="table-responsive">
                         <table class="table table-striped mt-3">
                             <thead>
                                 <tr>
@@ -87,6 +88,7 @@
                             </tbody>
                         </table>
                         {% include 'includes/pagination.html' %}
+                    </div>
                     </div>
                 </div>
             </div>
