--- a/projectsite/templates/subtask_list.html
+++ b/projectsite/templates/subtask_list.html
@@ -7,7 +7,7 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="card-title font-weight-bold text-primary">List of Subtasks</div>
-                        <div class="card-category">Page Subtitle</div>
+                        <div class="card-category">Keep track of the smaller steps within your main tasks.</div>
                     </div>
                     <br />
                     <div class="col-md-12 row">
@@ -58,6 +58,7 @@
                         </div>
                     </div>
                     <div class="card-body">
+                    <div class="table-responsive">
                         <table class="table table-striped mt-3">
                             <thead>
                                 <tr>
@@ -90,6 +91,7 @@
                             </tbody>
                         </table>
                         {% include 'includes/pagination.html' %}
+                    </div>
                     </div>
                 </div>
             </div>
