--- a/projectsite/templates/priority_del.html
+++ b/projectsite/templates/priority_del.html
@@ -7,7 +7,7 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="card-title font-weight-bold text-danger">Delete Priority</div>
-                        <div class="card-category">Page Subtitle</div>
+                        <div class="card-category">This action will remove the priority permanently.</div>
                     </div>
 
                     <div class="col-md-6">
