--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -1,9 +1,8 @@
-{% load static %}
+{% load static %} {% load pwa %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +10,7 @@
     <meta name="author" content="">
 
     <title>{% block title %}Hangarin{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'img/icon-256.png' %}">
 
     <!-- Custom fonts for this template-->
     <link 
@@ -24,6 +24,7 @@
     <!-- Custom styles for this template-->
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 
+    {% progressive_web_app_meta %}
 </head>
 
 <body id="page-top">
